--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 * {
-  @apply box-border p-0 m-0 no-underline border-none outline-none font-poppins scroll-smooth;
+  @apply box-border p-0 m-0 no-underline outline-none font-poppins scroll-smooth;
 }
 
 body {
