fix(BaseButton): add loading props for download

--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 html {
-  @apply text-[100%] lg:text-[75%] sm:text-[60%] overflow-x-hidden;
+  @apply text-[100%] lg:text-[75%] overflow-x-hidden;
 }
 
 /* ===== Scrollbar CSS ===== */
