--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  @apply text-black bg-white dark:text-white dark:bg-sb-charcoal-200;
+  @apply overflow-x-hidden text-black bg-white dark:text-white dark:bg-sb-charcoal-200;
 }
 
 html {
